# meet-matting

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_ANALYSIS.md  DEV_GUIDE.md  LICENSE  PERFORMANCE_AUDIT.md  README.md  pyproject.toml  requirements.txt  test_yolo.py
benchmark/: README.md  __init__.py  config.py  dashboard.py  gui.py  metrics.py  metrics_doc.md  postprocess.py  requirements.txt  run_benchmark.py  runner.py
benchmark/metrics/: __init__.py  compute_metrics.py  metrics_doc.md  performance_metrics.py
benchmark/models/: __init__.py  base.py  efficient_vit.py  mediapipe_model.py  mediapipe_multiclass.py  mediapipe_pose.py  mediapipe_selfie.py  mobilenetv3_lraspp.py  modnet.py  pphumanseg.py  rvm.py  segformer.py  trimap_matting.py
benchmark/postprocess_configs/: mediapipe_portrait.json  mobilenetv3_lraspp.json  rvm.json
metrics/: compute_metrics.py
pipeline/: README.md  app.py  config.py
pipeline/compositing/: README.md  __init__.py  alpha_blend.py  light_wrap.py
pipeline/core/: __init__.py  base.py  context.py  detector.py  filters.py  parameters.py  pipeline.py  registry.py  video_io.py  video_processing.py
pipeline/models/: README.md  __init__.py  _base.py  base.py  dummy_passthrough.py  mediapipe_multiclass.py  mediapipe_pose.py  mediapipe_selfie.py  mediapipe_selfie_landscape.py  pphumanseg_v2.py
pipeline/postprocessing/: README.md  __init__.py  _base.py  anchored_mask.py  boundary_blur.py  cca.py  ema.py  erosion.py  gradient_ema.py  guided_filter.py  hysteresis.py  identity.py  kalman.py  morphology.py  one_euro.py  optical_flow_warp.py  sigmoid.py  temporal_median.py  temporal_persistence.py  threshold.py  zoom_masking.py
pipeline/preprocessing/: README.md  __init__.py  _base.py  bilateral_filter.py  clahe.py  gaussian_blur.py  identity.py  person_zoom.py
pipeline/skip_strategies/: README.md  __init__.py  optical_flow_warp.py  reuse.py
pipeline/tests/: __init__.py  conftest.py  test_components.py  test_pipeline.py  test_registry.py
pipeline/ui/: __init__.py  sidebar.py  synced_player.py  video_panel.py  widgets.py
web-implementation/: index.html  script.js  style.css
(+6 files in other folders)
