[project]
name = "background-segmentation-benchmark"
version = "1.0.0"
description = "Video matting benchmark: MediaPipe, RVM, MobileNetV3 and more"
requires-python = ">=3.11"
dependencies = [
    # Core
    "numpy>=1.24.0",
    "opencv-contrib-python>=4.8.0",
    "tqdm>=4.65.0",
    # Deep Learning
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    # Inference
    "onnxruntime>=1.16.0",
    # MediaPipe
    "mediapipe>=0.10.0",
    # FLOPs
    "fvcore>=0.1.5",
    # Video I/O
    "imageio>=2.30.0",
    "imageio-ffmpeg>=0.4.0",
    # Dashboard
    "streamlit>=1.25.0",
    "pandas>=2.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long — let the formatter handle it
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true   # cv2, mediapipe, fvcore... no stubs
check_untyped_defs = false      # don't enforce on un-annotated bodies
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["pipeline/tests"]
